StringEnum is more elegant!

--- a/docs/user-guides/reference/devices/pumps/ml600.md
+++ b/docs/user-guides/reference/devices/pumps/ml600.md
@@ -37,6 +37,8 @@ Since the ML600 hardware allows for customizable valve setups, `FlowChem` suppor
 device configuration and operation. This is particularly important for identifying which valve is connected to which 
 pump.
 
+## Custom device
+
 You can specify the desired valve class(es) directly in the device configuration block using the following options:
 
 ### Dual-Syringe Setup
