--- a/docs/user-guides/reference/devices/pumps/ml600.md
+++ b/docs/user-guides/reference/devices/pumps/ml600.md
@@ -45,16 +45,18 @@ You can specify the desired valve class(es) directly in the device configuration
 
 For devices with two syringe pumps, you can independently assign valve classes to each side:
 ```toml
-valve_left_class = "ML600LeftValve"    # Options: "ML600LeftValve" or "ML600RightValve"
-valve_right_class = "ML600RightValve"  # Options: "ML600LeftValve" or "ML600RightValve"
+left_valve = "ML600LeftValve"    # Options: "ML600LeftValve" or "ML600RightValve"
+right_valve = "ML600RightValve"  # Options: "ML600LeftValve" or "ML600RightValve"
 ```
 
 ### Single-Syringe Setup
 
 For devices with a single syringe pump, specify only one valve class:
 ```toml
-valve_class = "ML600LeftValve"  # Options: "ML600LeftValve" or "ML600RightValve"
+left_valve = "ML600LeftValve"  # Options: "ML600LeftValve" or "ML600RightValve"
 ```
+
+It is worth noting that, as a standard setting, the single-syringe pump is equipped with a left valve.
 
 ## API methods
 See the [device API reference](../../api/ml600/api.md) for a description of the available methods.
